new plugin mediascanner
The module extract the  metadata from audio files stored in the local music
folder. Supported formats are flac, and mp3, aac with id3 tags.

--- a/backend/CMakeLists.txt
+++ b/backend/CMakeLists.txt
@@ -16,3 +16,6 @@ set(QML_IMPORT_PATH ${QML_IMPORT_DIRECTORY} CACHE string "QML Import path" INTER
 
 add_subdirectory(NosonApp)
 add_subdirectory(NosonThumbnailer)
+# Disable non-streamable medias
+set(DISABLE_MP4PARSER ON)
+add_subdirectory(NosonMediaScanner)
