--- a/noson.appdata.xml.in
+++ b/noson.appdata.xml.in
@@ -18,6 +18,7 @@
     </screenshot>
   </screenshots>
   <releases>
+    <release date="2019-03-08" version="3.11.1-2"/>
     <release date="2019-03-07" version="3.11.1"/>
     <release date="2019-02-15" version="3.10.4"/>
     <release date="2019-01-16" version="3.9.7"/>
