--- a/backend/lib/noson/test/CMakeLists.txt
+++ b/backend/lib/noson/test/CMakeLists.txt
@@ -1,5 +1,5 @@
-cmake_minimum_required (VERSION 2.8.9 FATAL_ERROR)
-cmake_policy (VERSION 2.8)
+cmake_minimum_required (VERSION 3.1.0 FATAL_ERROR)
+cmake_policy (VERSION 3.1)
 
 project (nosontest)
 
@@ -13,11 +13,8 @@ if (MSVC)
   set (CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /W3 /Od /RTC1 /EHsc /nologo")
 endif ()
 
-if (NOT MSVC)
-  if (COMPILER_SUPPORTS_CXX11)
-    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
-  endif ()
-endif ()
+set (CMAKE_CXX_STANDARD_REQUIRED ON)
+set (CMAKE_CXX_STANDARD 11)
 
 ###############################################################################
 # configure
