--- a/noson.appdata.xml.in
+++ b/noson.appdata.xml.in
@@ -18,6 +18,7 @@
     </screenshot>
   </screenshots>
   <releases>
+    <release date="2019-03-17" version="3.11.3"/>
     <release date="2019-03-09" version="3.11.2"/>
     <release date="2019-03-07" version="3.11.1"/>
     <release date="2019-02-15" version="3.10.4"/>
