--- a/backend/NosonMediaScanner/CMakeLists.txt
+++ b/backend/NosonMediaScanner/CMakeLists.txt
@@ -1,9 +1,11 @@
 cmake_minimum_required(VERSION 3.1.0)
 
-set (CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
+set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 
 # Automatically create moc files
 set(CMAKE_AUTOMOC ON)
+
+option(QT_STATICPLUGIN "Build a static plugin" OFF)
 
 find_package(Qt5Core REQUIRED)
 find_package(Qt5Gui REQUIRED)
@@ -19,67 +21,66 @@ if(DISABLE_MP4PARSER)
   add_definitions("-DDISABLE_MP4PARSER")
 endif()
 
-set(
-  NosonMediaScanner-static_SRCS
-  mediascanner.cpp
-  mediascannerengine.cpp
-  mediarunnable.cpp
-  mediaextractor.cpp
-  flacparser.cpp
-  id3parser.cpp
-  listmodel.cpp
-  byteorder.cpp
-  aggregate/artists.cpp
-  aggregate/genres.cpp
-  aggregate/albums.cpp
-  aggregate/tracks.cpp
-)
-
-set(
-  NosonMediaScanner-static_HDRS
-  mediascanner.h
-  mediascannerengine.h
-  mediarunnable.h
-  mediaextractor.h
-  flacparser.h
-  id3parser.h
-  m4aparser.cpp
-  m4aparser.h
-  listmodel.h
-  mediaparser.h
-  mediafile.h
-  mediainfo.h
-  byteorder.h
-  locked.h
-  tools.h
-  aggregate/aggregate.h
-  aggregate/artists.h
-  aggregate/genres.h
-  aggregate/albums.h
-  aggregate/tracks.h
-)
-
-include_directories (${CMAKE_CURRENT_SOURCE_DIR})
-
-add_library(NosonMediaScanner-static STATIC ${NosonMediaScanner-static_SRCS} ${NosonMediaScanner-static_HDRS})
-
-target_link_libraries(NosonMediaScanner-static Qt5::Core Qt5::Gui Qt5::Qml Qt5::Quick)
+if(QT_STATICPLUGIN)
+    set(CMAKE_AUTOMOC_MOC_OPTIONS -Muri=NosonMediaScanner)
+    add_definitions(-DQT_PLUGIN)
+    add_definitions(-DQT_STATICPLUGIN)
+endif()
 
 set(
   NosonMediaScanner_SRCS
   plugin.cpp
   plugin.h
+  mediascanner.cpp
+  mediascanner.h
+  mediascannerengine.cpp
+  mediascannerengine.h
+  mediarunnable.cpp
+  mediarunnable.h
+  mediaextractor.cpp
+  mediaextractor.h
+  flacparser.cpp
+  flacparser.h
+  id3parser.cpp
+  id3parser.h
+  id3v1genres.h
+  m4aparser.cpp
+  m4aparser.h
+  listmodel.cpp
+  listmodel.h
+  mediaparser.h
+  mediafile.h
+  mediainfo.h
+  byteorder.cpp
+  byteorder.h
+  locked.h
+  tools.h
+  aggregate/aggregate.h
+  aggregate/artists.cpp
+  aggregate/artists.h
+  aggregate/genres.cpp
+  aggregate/genres.h
+  aggregate/albums.cpp
+  aggregate/albums.h
+  aggregate/tracks.cpp
+  aggregate/tracks.h
 )
 
-add_library(NosonMediaScanner MODULE ${NosonMediaScanner_SRCS})
+include_directories (${CMAKE_CURRENT_SOURCE_DIR})
+
+if(QT_STATICPLUGIN)
+    add_library(NosonMediaScanner STATIC ${NosonMediaScanner_SRCS})
+else()
+    add_library(NosonMediaScanner MODULE ${NosonMediaScanner_SRCS})
+endif()
 
 set_target_properties(NosonMediaScanner PROPERTIES
     LIBRARY_OUTPUT_DIRECTORY ${QML_IMPORT_DIRECTORY}/NosonMediaScanner)
-target_link_libraries(NosonMediaScanner NosonMediaScanner-static)
+target_link_libraries(NosonMediaScanner Qt5::Core Qt5::Gui Qt5::Qml Qt5::Quick)
 
 # Copy qmldir file to build dir for running in QtCreator
 add_custom_target(NosonMediaScanner-qmldir ALL
-    COMMAND cp ${CMAKE_CURRENT_SOURCE_DIR}/qmldir ${QML_IMPORT_DIRECTORY}/NosonMediaScanner
+    COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/qmldir ${QML_IMPORT_DIRECTORY}/NosonMediaScanner/qmldir
     DEPENDS ${QMLFILES}
 )
 
