--- a/noson.appdata.xml.in
+++ b/noson.appdata.xml.in
@@ -21,6 +21,7 @@
     </screenshot>
   </screenshots>
   <releases>
+    <release date="2019-07-25" version="3.11.10"/>
     <release date="2019-07-14" version="3.11.9"/>
     <release date="2019-05-19" version="3.11.8"/>
     <release date="2019-04-03" version="3.11.4"/>
