--- a/gui/CMakeLists.txt
+++ b/gui/CMakeLists.txt
@@ -23,6 +23,14 @@ set(CMAKE_CXX_STANDARD 11)
 # Make the files visible on qtcreator
 add_custom_target(nosongui_QMlFiles ALL SOURCES ${APP_FILES})
 
+if (MSVC)
+  set (CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} /W3 /Od /RTC1")
+  set (CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /O2 /EHsc /nologo")
+  set (CMAKE_CXX_FLAGS_MINSIZEREL "${CMAKE_CXX_FLAGS_MINSIZEREL} /O2 /EHsc /nologo")
+  set (CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELWITHDEBINFO} /O2 /EHsc /nologo")
+  set (CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /W3 /Od /RTC1 /EHsc /nologo")
+endif ()
+
 set(
   noson-gui-sources
   noson.cpp
