mediascanner: support for media file OGG/Vorbis
- Parse OGG stream and extract metadata

--- a/backend/NosonMediaScanner/CMakeLists.txt
+++ b/backend/NosonMediaScanner/CMakeLists.txt
@@ -54,6 +54,8 @@ set(
   id3v1genres.h
   m4aparser.cpp
   m4aparser.h
+  oggparser.cpp
+  oggparser.h
   listmodel.cpp
   listmodel.h
   mediaparser.h
