--- a/noson.appdata.xml.in
+++ b/noson.appdata.xml.in
@@ -21,6 +21,7 @@
     </screenshot>
   </screenshots>
   <releases>
+    <release date="2019-09-27" version="3.15.0"/>
     <release date="2019-09-21" version="3.14.5"/>
     <release date="2019-09-16" version="3.14.4"/>
     <release date="2019-09-15" version="3.14.3"/>
