--- a/debian/control
+++ b/debian/control
@@ -16,6 +16,7 @@ Build-Depends: cmake,
                libpulse-dev,
                libflac-dev,
                libflac++-dev,
+               libdbus-1-dev,
                qml-module-qt-labs-settings,
                qml-module-qtgraphicaleffects,
                qml-module-qtqml-models2,
@@ -25,6 +26,7 @@ Build-Depends: cmake,
                qml-module-qtquick-particles2,
                qml-module-qtquick-templates2,
                qml-module-qtquick-window2,
+               libqt5dbus5,
                libqt5svg5
 Standards-Version: 3.9.6
 Homepage: https://github.com/janbar/noson-app
@@ -41,12 +43,14 @@ Depends: qml-module-qt-labs-settings,
          qml-module-qtquick-templates2,
          qml-module-qtquick-window2,
          qttranslations5-l10n,
+         libqt5dbus5,
          libqt5svg5,
          zlib1g,
          openssl,
          libpulse0,
          libflac++6v5,
          libflac8,
+         libdbus-1-3,
          ${shlibs:Depends}, ${misc:Depends}
 Description: SONOS controller for Linux
  Touch enabled SONOS controller for Linux
